--- a/app/views/manage/questionnaire/v10/appeal-process/extra-conditions.html
+++ b/app/views/manage/questionnaire/v10/appeal-process/extra-conditions.html
@@ -1,8 +1,10 @@
 {% extends '_layouts/layout-pins.html' %}
 
+{% set title = 'Extra conditions' %}
+
 {% block questions %}
   <h1 class="govuk-heading-l">
-    Extra conditions
+    {{ title }}
   </h1>
   <p>You need to tell us about any extra conditions that you&rsquo;d like the inspector to apply if they allow the appeal.</p>
 
