--- a/app/views/manage/questionnaire/v10/constraints/ancient-monument.html
+++ b/app/views/manage/questionnaire/v10/constraints/ancient-monument.html
@@ -1,12 +1,14 @@
 {% extends '_layouts/layout-pins.html' %}
 
+{% set title = 'Would the development affect an ancient monument?' %}
+
 {% block questions %}
   {{ govukRadios({
     idPrefix: 'ancient-monument',
     name: 'ancient-monument',
     fieldset: {
       legend: {
-        html: 'Would the development affect an ancient monument?',
+        html: title,
         classes: 'govuk-fieldset__legend--l',
         isPageHeading: true
       }
