--- a/app/views/manage/questionnaire/v10/constraints/listed-building-details.html
+++ b/app/views/manage/questionnaire/v10/constraints/listed-building-details.html
@@ -1,8 +1,10 @@
 {% extends '_layouts/layout-pins.html' %}
 
+{% set title = 'Listed building details' %}
+
 {% block questions %}
   <h1 class="govuk-heading-l">
-    Listed building details
+    {{ title }}
   </h1>
 
   {{ govukRadios({
