--- a/app/views/manage/questionnaire/v10/constraints/outstanding-natural-beauty.html
+++ b/app/views/manage/questionnaire/v10/constraints/outstanding-natural-beauty.html
@@ -1,12 +1,14 @@
 {% extends '_layouts/layout-pins.html' %}
 
+{% set title = 'Is the appeal site in an area of outstanding natural beauty?' %}
+
 {% block questions %}
   {{ govukRadios({
     idPrefix: 'outstanding-natural-beauty',
     name: 'outstanding-natural-beauty',
     fieldset: {
       legend: {
-        html: 'Is the appeal site in an area of outstanding natural beauty?',
+        html: ,
         classes: 'govuk-fieldset__legend--l',
         isPageHeading: true
       }
