--- a/app/views/manage/questionnaire/v10/constraints/right-of-way-check.html
+++ b/app/views/manage/questionnaire/v10/constraints/right-of-way-check.html
@@ -1,12 +1,14 @@
 {% extends '_layouts/layout-pins.html' %}
 
+{% set title = 'Would a public right of way need to be removed or diverted?' %}
+
 {% block questions %}
   {{ govukRadios({
     idPrefix: 'right-of-way-check',
     name: 'right-of-way-check',
     fieldset: {
       legend: {
-        html: 'Would a public right of way need to be removed or diverted?',
+        html: title,
         classes: 'govuk-fieldset__legend--l',
         isPageHeading: true
       }
