--- a/app/views/manage/questionnaire/v10/constraints/traveller.html
+++ b/app/views/manage/questionnaire/v10/constraints/traveller.html
@@ -1,12 +1,14 @@
 {% extends '_layouts/layout-pins.html' %}
 
+{% set title = 'Does the development relate to anyone claiming to be a Gypsy or Traveller?' %}
+
 {% block questions %}
   {{ govukRadios({
     idPrefix: 'traveller',
     name: 'traveller',
     fieldset: {
       legend: {
-        html: 'Does the development relate to anyone claiming to be a Gypsy or Traveller?',
+        html: title,
         classes: 'govuk-fieldset__legend--l',
         isPageHeading: true
       }
