--- a/app/views/manage/questionnaire/v10/constraints/tree-order-upload.html
+++ b/app/views/manage/questionnaire/v10/constraints/tree-order-upload.html
@@ -1,8 +1,10 @@
 {% extends '_layouts/layout-pins.html' %}
 
+{% set title = 'Upload a plan showing the extent of the order' %}
+
 {% block questions %}
   <h1 class="govuk-heading-l">
-    Upload a plan showing the extent of the order
+    {{ title }}
   </h1>
 
   {% set uploadHtml %}
@@ -12,8 +14,7 @@
       classes: 'moj-multi-file-upload__input',
       label: {
         text: 'Upload a file',
-        classes: 'govuk-label--m',
-        isPageHeading: true
+        classes: 'govuk-label--m'
       },
       hint: {
         text: 'The file must be a DOC, DOCX, PDF, TIF, JPG or PNG and be smaller than 15MB'
