--- a/app/views/manage/questionnaire/v10/declaration.html
+++ b/app/views/manage/questionnaire/v10/declaration.html
@@ -1,38 +1,24 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% block beforeContent %}
-  {{ govukPhaseBanner({
-    tag: { text: 'Beta' },
-    html: 'This is a new service &ndash; your <a class="govuk-link" href="#feedback">feedback</a> will help us to improve it.'
-  }) }}
+{% set title = 'Declaration' %}
 
-  {{ govukBackLink({
-    html: 'Back',
-    href: 'javascript:history.back()'
-  }) }}
+{% block questions %}
+  <h1 class="govuk-heading-l">
+    {{ title }}
+  </h1>
+
+  <p class="govuk-!-margin-bottom-2">By submitting the questionnaire, you confirm you understand that:</p>
+  <ul class="govuk-list govuk-list--bullet">
+    <li>this is your only opportunity to submit the questionnaire</li>
+    <li>if you have not included all the information we’ve requested, we may not be able to progress your questionnaire</li>
+  </ul>
+
+  <p>You also confirm that, to the best of your knowledge, the details you are providing are correct.</p>
 {% endblock %}
 
-{% block content %}
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds-from-desktop">
-
-      <h1 class="govuk-heading-l">
-        Declaration
-      </h1>
-
-      <p class="govuk-!-margin-bottom-2">By submitting the questionnaire, you confirm you understand that:</p>
-      <ul class="govuk-list govuk-list--bullet">
-        <li>this is your only opportunity to submit the questionnaire</li>
-        <li>if you have not included all the information we’ve requested, we may not be able to progress your questionnaire</li>
-      </ul>
-
-      <p>You also confirm that, to the best of your knowledge, the details you are providing are correct.</p>
-
-      {{ govukButton({
-        html: 'Accept and send',
-        href: 'confirmation'
-      }) }}
-
-    </div>
-  </div>
+{% block buttons %}
+  {{ govukButton({
+    html: 'Accept and send',
+    href: 'confirmation'
+  }) }}
 {% endblock %}
