--- a/app/views/manage/questionnaire/v10/env-impact/site-notice-upload.html
+++ b/app/views/manage/questionnaire/v10/env-impact/site-notice-upload.html
@@ -1,8 +1,10 @@
 {% extends '_layouts/layout-pins.html' %}
 
+{% set title = 'Upload the site notice and advertisement for the environmental impact assessment' %}
+
 {% block questions %}
   <h1 class="govuk-heading-l">
-    Upload the site notice and advertisement for the environmental impact assessment
+    {{ title }}
   </h1>
 
   <p>This is different to the site notice or advertisement for the application.</p>
@@ -14,8 +16,7 @@
       classes: 'moj-multi-file-upload__input',
       label: {
         text: 'Upload files',
-        classes: 'govuk-label--m',
-        isPageHeading: true
+        classes: 'govuk-label--m'
       },
       hint: {
         text: 'The file must be a DOC, DOCX, PDF, TIF, JPG or PNG and be smaller than 15MB'
