--- a/app/views/manage/questionnaire/v10/po-report/community-infrastructure-adopted.html
+++ b/app/views/manage/questionnaire/v10/po-report/community-infrastructure-adopted.html
@@ -1,12 +1,14 @@
 {% extends '_layouts/layout-pins.html' %}
 
+{% set title = 'Is the community infrastructure levy formally adopted?' %}
+
 {% block questions %}
   {{ govukRadios({
     idPrefix: 'community-infrastructure-adopted',
     name: 'community-infrastructure-adopted',
     fieldset: {
       legend: {
-        html: 'Is the community infrastructure levy formally adopted?',
+        html: title,
         classes: 'govuk-fieldset__legend--l',
         isPageHeading: true
       }
