--- a/app/views/manage/questionnaire/v10/po-report/report-upload.html
+++ b/app/views/manage/questionnaire/v10/po-report/report-upload.html
@@ -2,13 +2,15 @@
 
 {% block questions %}
   {% if data['non-determination'] == 'true' %}
+    {% set title = 'Upload what your decision notice would have said' %}
     <h1 class="govuk-heading-l">
-      Upload what your decision notice would have said
+      {{ title }}
     </h1>
     <p>Upload a copy of what your decision notice would have said if you&rsquo;d decided the application.</p>
   {% else %}
+    {% set title = 'Upload the planning officer&rsquo;s report' %}
     <h1 class="govuk-heading-l">
-      Upload the planning officer&rsquo;s report
+      {{ title }}
     </h1>
     <p>Upload the planning officer&rsquo;s report to committee or delegated report on the application, and any other relevant documents or minutes.</p>
   {% endif %}
@@ -20,8 +22,7 @@
       classes: 'moj-multi-file-upload__input',
       label: {
         text: 'Upload a file',
-        classes: 'govuk-label--m',
-        isPageHeading: true
+        classes: 'govuk-label--m'
       },
       hint: {
         text: 'The file must be a DOC, DOCX, PDF, TIF, JPG or PNG and be smaller than 15MB'
