--- a/app/views/manage/questionnaire/v10/site-access/site-visibility.html
+++ b/app/views/manage/questionnaire/v10/site-access/site-visibility.html
@@ -1,5 +1,7 @@
 {% extends '_layouts/layout-pins.html' %}
 
+{% set title = 'Can the inspector see the subject of the appeal from a public road or footpath?' %}
+
 {% block questions %}
   {{ govukRadios({
     idPrefix: 'site-visibility',
@@ -7,7 +9,7 @@
     classes: '',
     fieldset: {
       legend: {
-        html: 'Can the inspector see the subject of the appeal from a public road or footpath?',
+        html: title,
         classes: 'govuk-fieldset__legend--l',
         isPageHeading: true
       }
