Removed empty links

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,13 +25,13 @@
           <a href="appeal/before-you-start/">Before you start</a>
         </li>
         <li>
-          <a>Save and return</a>
+          Save and return
         </li>
         <li>
-          <a>GOV.UK guidance</a>
+          GOV.UK guidance
         </li>
         <li>
-          <a>Service offline</a>
+          Service offline
         </li>
       </ul>
 
@@ -40,16 +40,16 @@
       </h3>
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a>HAS</a>
+          HAS
         </li>
         <li>
-          <a>Full planning</a>
+          Full planning
         </li>
         <li>
-          <a>Enforcement</a>
+          Enforcement
         </li>
         <li>
-          <a>Lawful development</a>
+          Lawful development
         </li>
       </ul>
     {% endset -%}
@@ -64,7 +64,7 @@
       </h3>
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a>Dashboard / add users</a>
+          Dashboard / add users
         </li>
       </ul>
 
@@ -76,10 +76,10 @@
           <a href="manage/questionnaire/">Questionnaire</a>
         </li>
         <li>
-          <a>Statement</a>
+          Statement
         </li>
         <li>
-          <a>Final comments</a>
+          Final comments
         </li>
       </ul>
     {% endset -%}
