--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,7 +13,7 @@
       <div class="govuk-grid-column-two-thirds">
 
         <h1 class="govuk-heading-l">
-          {{serviceName}} prototypes
+          {{serviceName}} prototypes archive
         </h1>
 
         <h2 class="govuk-heading-m">Introduction</h2>
