--- a/app/views/manage/questionnaire/v10/constraints/outstanding-natural-beauty.html
+++ b/app/views/manage/questionnaire/v10/constraints/outstanding-natural-beauty.html
@@ -8,7 +8,7 @@
     name: 'outstanding-natural-beauty',
     fieldset: {
       legend: {
-        html: ,
+        html: title,
         classes: 'govuk-fieldset__legend--l',
         isPageHeading: true
       }
