--- a/app/views/manage/questionnaire/v11/appeal-process/extra-conditions.html
+++ b/app/views/manage/questionnaire/v11/appeal-process/extra-conditions.html
@@ -6,11 +6,9 @@
   <h1 class="govuk-heading-l">
     {{ title }}
   </h1>
-  <p>You need to tell us about any extra conditions that you&rsquo;d like the inspector to apply if they allow the appeal.</p>
+  <p>You need to tell us about any extra conditions you want the inspector to apply if they allow the appeal.</p>
 
-  <p>If you choose to not tell us about them now, you have until{{ '6' | daysInFuture }} to do so.</p>
-
-  <p>To submit extra conditions after the questionnaire, email <a href=:mailto:CaseOfficers@planninginspectorate.gov.uk">CaseOfficers@planninginspectorate.gov.uk</a>.</p>
+  <p>If you choose to not tell us about them now, you must email <a href=:mailto:CaseOfficers@planninginspectorate.gov.uk">CaseOfficers@planninginspectorate.gov.uk</a> by {{ '6' | daysInFuture }}.</p>
 
   <p>You do not need to tell us about standard conditions.</p>
 
