--- a/app/views/manage/questionnaire/v11/appeal-process/other-appeals.html
+++ b/app/views/manage/questionnaire/v11/appeal-process/other-appeals.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Are there any other appeals adjacent or close to the site still being considered?' %}
+{% set title = 'Are there any other appeals next to or close to the site still being considered?' %}
 
 {% block questions %}
   {% set appealRefs %}
