--- a/app/views/index.html
+++ b/app/views/index.html
@@ -64,7 +64,10 @@
       </h3>
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          Dashboard / add users
+          <a href="manage/dashboard/">Dashboard</a>
+        </li>
+        <li>
+          Add and remove users
         </li>
       </ul>
 
