--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -2,3 +2,10 @@
 @import "components/header";
 @import "components/footer";
 @import "components/upload";
+
+
+// Top border for headers to draw attention to areas
+.app-border-top-big {
+	border-top: 5px solid govuk-colour("turquoise");
+	padding-top: 15px;
+}
