--- a/app/views/manage/dashboard/v2/index.html
+++ b/app/views/manage/dashboard/v2/index.html
@@ -5,9 +5,8 @@
 
 {% block content %}
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
-
-    <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
+  <div class="govuk-grid-column-two-thirds">
+    <h1 class="govuk-heading-l">
       <span class="govuk-caption-l">
         {{ data['dashboard-lpa'] }}
         <span class="govuk-visually-hidden"> - </span>
@@ -15,50 +14,16 @@
       {{ title }}
     </h1>
 
-    <div class='govuk-grid-row'>
-      <div class="govuk-grid-column-two-thirds">
+    <p>Planning appeals will be shown here. All users will be notified by email when a new appeal is added.</p>
 
-        {{ mojSearch({
-          action: 'search-appeals',
-          method: 'post',
-          classes: 'govuk-!-width-three-quarters',
-          input: {
-            id: 'search-ref',
-            name: 'search-ref'
-          },
-          label: {
-            text: 'Find an appeal using application number',
-            classes: 'govuk-label-- govuk-!-margin-top-4'
-          },
-          hint: {
-            tex: 'Application number'
-          },
-          button: {
-            text: 'Find',
-            classes: 'govuk-button--secondary'
-          }
-        }) }}
-      </div>
+    <p><a href="" class="govuk-link--no-visited-state">Add and remove account users</a></p>
+  </div>
 
-      <div class="govuk-grid-column-one-third">
-        <h2 class="govuk-heading-s app-border-top-big">
-          Manage account
-        </h2>
-
-        <ul class="govuk-list">
-          <li>
-            <a href="" class="govuk-link--no-visited-state">Add and remove account users</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-
-
-
-
+  <div class="govuk-grid-column-full">
     {{ govukTable({
-      caption: 'Active appeals',
-      captionClasses: 'govuk-table__caption--m govuk-!-margin-top-6',
+      classes: 'govuk-!-margin-top-3',
+      caption: 'Current appeals',
+      captionClasses: 'govuk-table__caption--m govuk-!-padding-top-6 app-border-top-big',
       firstCellIsHeader: true,
       head: [
         {
