--- a/app/views/manage/dashboard/v2/index.html
+++ b/app/views/manage/dashboard/v2/index.html
@@ -1,4 +1,5 @@
 {% extends '_layouts/layout-pins.html' %}
+{% set prototypeLinks = [{href: './?no-appeals=true', text: 'No appeals'}] if data['no-appeals'] != 'true' else [{href: './?no-appeals=false', text: 'Show appeals'}] %}
 
 {% set back = false %}
 {% set title = 'Planning appeals' %}
@@ -14,51 +15,53 @@
       {{ title }}
     </h1>
 
-    <p>Planning appeals will be shown here. All users will be notified by email when a new appeal is added.</p>
+    <p>{{ 'Planning appeals will be shown here. ' if data['no-appeals'] == 'true' }}All users will be notified by email when a new appeal is added.</p>
 
     <p><a href="" class="govuk-link--no-visited-state">Add and remove account users</a></p>
   </div>
 
-  <div class="govuk-grid-column-full">
-    {{ govukTable({
-      classes: 'govuk-!-margin-top-3',
-      caption: 'Current appeals',
-      captionClasses: 'govuk-table__caption--m govuk-!-padding-top-6 app-border-top-big',
-      firstCellIsHeader: true,
-      head: [
-        {
-          html: 'Application number'
-        },
-        {
-          html: 'Appeal reference'
-        },
-        {
-          html: 'Due date'
-        },
-        {
-          html: '<span class="govuk-visually-hidden">Actions</span>',
-          format: 'numeric'
-        }
-      ],
-      rows: [
-        [
+  {% if data['no-appeals'] != 'true' %}
+    <div class="govuk-grid-column-full">
+      {{ govukTable({
+        classes: 'govuk-!-margin-top-3',
+        caption: 'Current appeals',
+        captionClasses: 'govuk-table__caption--m govuk-!-padding-top-6 app-border-top-big',
+        firstCellIsHeader: true,
+        head: [
           {
-            html: 'APP/Q9999/D/21/1345264'
+            html: 'Application number'
           },
           {
-            html: '21/05058/FUL'
+            html: 'Appeal reference'
           },
           {
-            html: '10' | daysInFuture
+            html: 'Due date'
           },
           {
-            html: '<a href="#0">Complete questionnaire</a>',
+            html: '<span class="govuk-visually-hidden">Actions</span>',
             format: 'numeric'
           }
+        ],
+        rows: [
+          [
+            {
+              html: 'APP/Q9999/D/21/1345264'
+            },
+            {
+              html: '21/05058/FUL'
+            },
+            {
+              html: '10' | daysInFuture
+            },
+            {
+              html: '<a href="#0">Complete questionnaire</a>',
+              format: 'numeric'
+            }
+          ]
         ]
-      ]
-    }) }}
+      }) }}
+    </div>
+  {% endif %}
 
-  </div>
 </div>
 {% endblock %}
