Added manage users for LPAs

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -9,3 +9,8 @@
 	border-top: 5px solid govuk-colour("turquoise");
 	padding-top: 15px;
 }
+
+.app-border-bottom-big {
+	border-bottom: 5px solid govuk-colour("turquoise");
+	padding-bottom: 15px;
+}
