--- a/app/views/index.html
+++ b/app/views/index.html
@@ -67,7 +67,7 @@
           <a href="manage/dashboard/">Dashboard</a>
         </li>
         <li>
-          Add and remove users
+          <a href="manage/manage-users/">Manage users</a>
         </li>
       </ul>
 
