--- a/app/views/manage/dashboard/v2/index.html
+++ b/app/views/manage/dashboard/v2/index.html
@@ -17,7 +17,7 @@
 
     <p>{{ 'Planning appeals will be shown here. ' if data['no-appeals'] == 'true' }}All users will be notified by email when a new appeal is added.</p>
 
-    <p><a href="" class="govuk-link--no-visited-state">Add and remove account users</a></p>
+    <p><a href="../../manage-users/v2/" class="govuk-link--no-visited-state">Add and remove account users</a></p>
   </div>
 
   {% if data['no-appeals'] != 'true' %}
