Added a link to the new prototype

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,6 +16,10 @@
           {{serviceName}} prototypes archive
         </h1>
 
+        {{ govukInsetText({
+          html: '<p>We have moved to a new prototype, this is kept live so people can see the design history only. New work will be hosted on the other prototype.</p><p><a href="https://appeals-prototypes.up.railway.app/">https://appeals-prototypes.up.railway.app/</a></p>'
+        }) }}
+
         <h2 class="govuk-heading-m">Introduction</h2>
 
         <p class="govuk-body">
