Added LPA final comments

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -82,7 +82,7 @@
           Statement
         </li>
         <li>
-          Final comments
+          <a href="manage/final-comments/">Final comments</a>
         </li>
       </ul>
     {% endset -%}
