--- a/app/views/manage/final-comments/v1/confirmation.html
+++ b/app/views/manage/final-comments/v1/confirmation.html
@@ -1,7 +1,7 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Questionnaire submitted' %}
 {% set back = false %}
+{% set title = 'Final comments submitted' %}
 
 {% block content %}
   <div class="govuk-grid-row">
@@ -11,17 +11,13 @@
         titleHtml: title
       }) }}
 
-      <p>We&rsquo;ve sent you a confirmation email with a link to download a copy of your questionnaire.</p>
-
-      {{ govukInsetText({
-        html: '<p>You need to email a copy of your questionnaire to the appellant. This must include a copy of any documents you uploaded.</p>'
-      }) }}
+      <p>We&rsquo;ve sent you a confirmation email.</p>
 
       <h2 class="govuk-heading-m">
         What happens next
       </h2>
 
-      <p>We&rsquo;ll review your evidence and will be in touch if we need any further information.</p>
+      <p>We&rsquo;ll check you&rsquo;ve submitted everything we need to progress the appeal. We&rsquo;ll contact you once we&rsquo;ve done this.</p>
 
       <p>
         <a href="../../dashboard/v2/" class="govuk-link--no-visited-state">View your planning appeals</a>
