--- a/app/views/manage/manage-users/index.html
+++ b/app/views/manage/manage-users/index.html
@@ -32,7 +32,7 @@
 
     <p class="govuk-!-margin-bottom-2">Changes:</p>
     <ul class="govuk-list govuk-list--bullet">
-      <li>?</li>
+      <li>Now you can add more than one person</li>
     </ul>
 
     {{ govukButton({
