--- a/app/views/manage/final-comments/v1/documents-check.html
+++ b/app/views/manage/final-comments/v1/documents-check.html
@@ -14,7 +14,7 @@
       }
     },
     hint: {
-      text: 'You must not add new evidence to your appeal'
+      text: 'You must not add new evidence to the appeal'
     },
     items: [
       {
