--- a/app/views/manage/final-comments/v1/add-comments.html
+++ b/app/views/manage/final-comments/v1/add-comments.html
@@ -16,7 +16,7 @@
     Sensitive information
   </h2>
 
-  <p>You must not include any sensitive information in your comments. If you do, you&rsquo;ll be asked to resubmit, which will delay the appeal.</p>
+  <p>You must not include any sensitive information in your comments.</p>
 
   {% set sensitiveHTML %}
     <p class="govuk-!-margin-bottom-2">Sensitive information refers to:</p>
