Added prototype options to change default data for research

--- a/app/views/_layouts/layout-pins.html
+++ b/app/views/_layouts/layout-pins.html
@@ -13,12 +13,8 @@
 			label: 'Primary navigation',
 			items: [
 				{
-					text: data['username'] or 'Chris Armstrong',
-					href: '#0'
-				},
-				{
 					text: 'Sign out',
-					href: '/sign-out'
+					href: '/#0'
 				}
 			]
 		} if nav != false
