--- a/app/views/manage/final-comments/index.html
+++ b/app/views/manage/final-comments/index.html
@@ -37,7 +37,7 @@
     }) }}
 
     {% set lpaForm %}
-      <form method="get" action="v{{version}}/">
+      <form method="get" action="v{{version}}/add-comments">
 
         {{ govukInput({
           id: 'dashboard-lpa',
@@ -64,7 +64,7 @@
           name: 'users[0][email]',
           value: data['users']['0']['email'],
           label: {
-            html: 'LPA&rsquo;s email'
+            html: 'Admin account email'
           },
           spellcheck: false
         }) }}
