--- a/app/views/manage/manage-users/index.html
+++ b/app/views/manage/manage-users/index.html
@@ -69,7 +69,7 @@
           name: 'users[0][email]',
           value: data['users']['0']['email'],
           label: {
-            html: 'LPA&rsquo;s email'
+            html: 'Admin account email'
           },
           spellcheck: false
         }) }}
