lpa account with statement and final comment links

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -64,7 +64,7 @@
       </h3>
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="manage/dashboard/">Dashboard</a>
+          <a href="manage/appeals/">Local authority appeals</a>
         </li>
         <li>
           <a href="manage/manage-users/">Manage users</a>
@@ -79,7 +79,7 @@
           <a href="manage/questionnaire/">Questionnaire</a>
         </li>
         <li>
-          Statement
+          <a href="manage/statement/">Appeal statement</a>
         </li>
         <li>
           <a href="manage/final-comments/">Final comments</a>
