--- a/app/views/manage/appeals/index.html
+++ b/app/views/manage/appeals/index.html
@@ -1,7 +1,7 @@
 {% extends '_layouts/layout-pins.html' %}
 
 {% set nav = false %}
-{% set title = 'Dashboard' %}
+{% set title = 'Local appeals' %}
 
 {% block backLink %}
   {{ govukBackLink({
@@ -32,7 +32,8 @@
 
     <p class="govuk-!-margin-bottom-2">Changes:</p>
     <ul class="govuk-list govuk-list--bullet">
-      <li>Dashboard layout.</li>
+      <li>Moved version 2 of this here (<a href="https://pins-appeals.herokuapp.com/lpa/v1/no-appeals" class="govuk-link govuk-link--no-visited-state" title="Link to version 1">see version 1</a>)</li>
+      <li>UI update</li>
     </ul>
 
     {{ govukButton({
