--- a/app/views/manage/final-comments/v1/confirmation.html
+++ b/app/views/manage/final-comments/v1/confirmation.html
@@ -20,7 +20,7 @@
       <p>We&rsquo;ll check you&rsquo;ve submitted everything we need to progress the appeal. We&rsquo;ll contact you once we&rsquo;ve done this.</p>
 
       <p>
-        <a href="../../dashboard/v2/" class="govuk-link--no-visited-state">View your planning appeals</a>
+        <a href="../../appeals/v2/?finalcomments=complete" class="govuk-link--no-visited-state">View your planning appeals</a>
       </p>
 
     </div>
