--- a/app/views/manage/manage-users/v2/index.html
+++ b/app/views/manage/manage-users/v2/index.html
@@ -5,7 +5,7 @@
 {% block backLink %}
   {{ govukBackLink({
     html: 'Back to planning appeals',
-    href: '../../dashboard/v2/'
+    href: '../../appeals/v2/'
   }) }}
 {% endblock %}
 
