Small content change to appeals table headers

--- a/app/views/manage/appeals/v2/index.html
+++ b/app/views/manage/appeals/v2/index.html
@@ -47,10 +47,10 @@
             html: 'Appeal reference'
           },
           {
-            html: 'Due date'
+            html: 'Deadline'
           },
           {
-            html: 'Days left'
+            html: 'Due in'
           },
           {
             html: '<span class="govuk-visually-hidden">Actions</span>',
